# py-pfeiffer-vacuum-protocol

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  README.md  devices.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  run-tests.yml
pfeiffer_vacuum_protocol/: __init__.py  mock.py  mock_serial.py  pfeiffer_vacuum_protocol.py
pfeiffer_vacuum_protocol/tests/: __init__.py  test_mock.py  test_mock_serial.py  test_pfeiffer_vacuum_protocol.py
src/pfeiffer_vacuum_protocol/: __init__.py  mock.py  pfeiffer_vacuum_protocol.py
tests/: test_mock.py  test_pfeiffer_vacuum_protocol.py
